manifests/deployment-app1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1
  labels:
    app: app1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app1
  template:
    metadata:
      labels:
        app: app1
    spec:
      containers:
        - name: app1
          image: demoacrrajat.azurecr.io/app1:latest
          ports:
            - containerPort: 80
          imagePullPolicy: Always
