manifests/deployment-app2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app2
  labels:
    app: app2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app2
  template:
    metadata:
      labels:
        app: app2
    spec:
      containers:
        - name: app2
          image: demoacrrajat.azurecr.io/app2:latest
          ports:
            - containerPort: 80
          imagePullPolicy: Always
