manifests/app2-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app2
  template:
    metadata:
      labels:
        app: app2
    spec:
      containers:
      - name: app2
        image: demorajatacr.azurecr.io/app2:latest  # gets replaced in Actions
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: app-service2
spec:
  type: ClusterIP
  selector:
    app: app2
  ports:
  - port: 80
    targetPort: 80
